# vneutils

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  codecov.yml
.github/workflows/: ci.yml
include/vertexnova/utils/: command_line_parser.h  utils.h
scripts/: build_linux.sh  build_macos.sh  build_windows.py
src/: command_line_parser.cpp
tests/: CMakeLists.txt  command_line_parser_test.cpp  main.cpp
